--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -23,10 +23,16 @@
     label {
         font-size: 13px;
     }
+    .link-light{
+        background: #0c63e4;
+        border-radius: 8px;
+        margin:0 5px;
+        border: 1px solid blue;
+    }
 
 </style>
-<section id="topbar" class="d-flex align-items-center" style="height: 38px;">
-    <div class="container d-flex justify-content-center justify-content-md-between">
+<section id="topbar" class="d-flex align-items-center" style="height: 45px;">
+    <div class="container d-flex justify-content-between ps-2 pe-md-2 p-0">
         <div class="contact-info d-flex align-items-center" style="font-size:20px;">
             <a href="https://github.com/starscream32/jum-journal-system/tree/master" class=" p-1 me-2"><i
                     class="bi bi-github"></i></a>
@@ -34,12 +40,28 @@
                     class="bi bi-linkedin"></i></a>
             <a href="https://twitter.com/anovin_/" class=" p-1 me-2"><i
                     class="bi bi-twitter"></i></a>
-        </div>
-        <div class="social-links d-none d-md-flex align-items-center">
             <a href="{% url 'index' %}#contact">
                 <i class="bi bi-envelope-fill" style="font-size: 20px;">
+
                 </i>
             </a>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'my_tutorials' %}" style="cursor: pointer;" class="shadow nav-link link-light  ">Profile</a>
+            <a style="cursor: pointer;" href="{% url 'logout_view' %}" class="shadow nav-link link-light">
+                Logout
+            </a>
+            {% else %}
+            <a data-bs-target="#createModal" data-bs-toggle="modal" style="cursor: pointer;" class="nav-link link-light ">
+                Login
+            </a>
+            <a data-bs-target="#registerModal" data-bs-toggle="modal" style="cursor: pointer;" class="nav-link link-light ">
+                Register
+            </a>
+            {% endif %}
+
         </div>
     </div>
 </section>
@@ -56,8 +78,9 @@
         <nav id="navbar" class="navbar">
             <ul>
                 <li><a class="nav-link scrollto" href="{% url 'index' %}#hero">Home</a></li>
-                <li><a class="nav-link scrollto" data-bs-toggle="modal" style="cursor:pointer;"
-                       data-bs-target="#createModal">Create tutorial
+                <li><a class="nav-link scrollto" style="cursor:pointer;"
+                       {% if request.user.is_authenticated %} href="{% url 'create_tutorial' %}" {% else %}
+                       data-bs-target="#createModal" data-bs-toggle="modal" {% endif %}>Create tutorial
                     <div class="beta"></div>
                 </a></li>
 
@@ -99,7 +122,7 @@
 
 <div class="modal fade" id="createModal" aria-hidden="true" aria-labelledby="createModalLabel"
      tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header" style="padding: 15px 18px; align-items: center;">
                 <p class="m-0"><small>We will never share your information.</small></p>
@@ -117,7 +140,7 @@
 
 
                 </form>
-                <button class="btn float-end shadow-sm border" style="background: #253f62; color: white"
+                <button class="btn btn-sm float-end shadow-sm border" style=" color: black;"
                         data-bs-target="#registerModal" data-bs-toggle="modal" data-bs-dismiss="modal">
                     <small style="margin-top: -5px;">Register</small>
                 </button>
